# Engine

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.html  README.md
src/: CMakeLists.txt  bg.icns  biogears.epf  build-eclipsemingw.bat  build-mingw.bat  build-msvc.bat  build-raspberryPi.sh  build-unixMake.sh  build-xcode.sh  build.properties  build.properties.eclipsemingw  build.properties.mingw  build.properties.msvc  build.properties.unixMake  build.properties.xcode  build.xml  deploy-linux-library.sh  deploy-osx-library.sh  deploy-unix-executable.sh  undeploy-unix-executable.sh
src/cdm/: CDM.cmake  CDMJNI.cmake  CDMTest.cmake  CMakeLists.txt  build.xml  log4cpp.cmake
src/cdm/cpp/: CommonDataModel.h  CommonDataModelJNI.cpp  Serializer.cpp  Serializer.h  stdafx.cpp  stdafx.h
src/cdm/cpp/circuit/: SECircuit.h  SECircuit.inl  SECircuitCalculator.cpp  SECircuitCalculator.h  SECircuitCalculator.inl  SECircuitManager.cpp  SECircuitManager.h  SECircuitNode.h  SECircuitNode.inl  SECircuitPath.h  SECircuitPath.inl  SECombinedCircuit.h  SECombinedCircuit.inl
src/cdm/cpp/compartment/: SECompartment.cpp  SECompartment.h  SECompartmentGraph.h  SECompartmentGraph.inl  SECompartmentLink.cpp  SECompartmentLink.h  SECompartmentManager.cpp  SECompartmentManager.h  SECompartmentNodes.h  SECompartmentNodes.inl  SECompartmentTransportGraph.h  SECompartmentTransportGraph.inl
src/cdm/cpp/engine/: PhysiologyEngine.h  PhysiologyEngineConfiguration.cpp  PhysiologyEngineConfiguration.h  PhysiologyEngineDynamicStabilization.cpp  PhysiologyEngineDynamicStabilization.h  PhysiologyEngineStabilization.cpp  PhysiologyEngineStabilization.h  PhysiologyEngineTimedStabilization.cpp  PhysiologyEngineTimedStabilization.h  PhysiologyEngineTrack.cpp  PhysiologyEngineTrack.h
src/cdm/cpp/patient/: SEMeal.cpp  SEMeal.h  SENutrition.cpp  SENutrition.h  SEPatient.cpp  SEPatient.h
src/cdm/cpp/properties/: SEArray.cpp  SEArray.h  SEArrayPressure.cpp  SEArrayPressure.h  SEArrayVolume.cpp  SEArrayVolume.h  SEArrayVolumePerTime.cpp  SEArrayVolumePerTime.h  SEDecimalFormat.cpp  SEDecimalFormat.h  SEFunction.cpp  SEFunction.h  SEFunctionElectricPotentialVsTime.cpp  SEFunctionElectricPotentialVsTime.h  SEFunctionVolumeVsTime.cpp  SEFunctionVolumeVsTime.h  SEHistogram.cpp  SEHistogram.h  SEHistogramFractionVsLength.cpp  SEHistogramFractionVsLength.h  SEProperty.cpp  SEProperty.h  SEScalar.cpp  SEScalar.h  SEScalar.inl  SEScalar0To1.cpp  SEScalar0To1.h  SEScalarAmount.cpp  SEScalarAmount.h  SEScalarAmountPerMass.cpp  SEScalarAmountPerMass.h  SEScalarAmountPerTime.cpp  SEScalarAmountPerTime.h  SEScalarAmountPerVolume.cpp  SEScalarAmountPerVolume.h  SEScalarArea.cpp  SEScalarArea.h  SEScalarAreaPerTimePressure.cpp  SEScalarAreaPerTimePressure.h  SEScalarElectricCapacitance.cpp  (+105 more)
src/cdm/cpp/scenario/: SEAction.cpp  SEAction.h  SEActionManager.cpp  SEActionManager.h  SEAdvanceTime.cpp  SEAdvanceTime.h  SEAnesthesiaMachineActionCollection.cpp  SEAnesthesiaMachineActionCollection.h  SECondition.cpp  SECondition.h  SEConditionManager.cpp  SEConditionManager.h  SEEnvironmentActionCollection.cpp  SEEnvironmentActionCollection.h  SEInhalerActionCollection.cpp  SEInhalerActionCollection.h  SEPatientActionCollection.cpp  SEPatientActionCollection.h  SEScenario.cpp  SEScenario.h  SEScenarioAutoSerialization.cpp  SEScenarioAutoSerialization.h  SEScenarioExec.cpp  SEScenarioExec.h  SEScenarioInitialParameters.cpp  SEScenarioInitialParameters.h  SESerializeState.cpp  SESerializeState.h
src/cdm/cpp/substance/: SESubstance.cpp  SESubstance.h  SESubstanceAerosolization.cpp  SESubstanceAerosolization.h  SESubstanceClearance.cpp  SESubstanceClearance.h  SESubstanceCompound.cpp  SESubstanceCompound.h  SESubstanceConcentration.cpp  SESubstanceConcentration.h  SESubstanceFraction.cpp  SESubstanceFraction.h  SESubstanceManager.cpp  SESubstanceManager.h  SESubstancePharmacodynamics.cpp  SESubstancePharmacodynamics.h  SESubstancePharmacokinetics.cpp  SESubstancePharmacokinetics.h  SESubstancePhysicochemicals.cpp  SESubstancePhysicochemicals.h  SESubstanceTissuePharmacokinetics.cpp  SESubstanceTissuePharmacokinetics.h  SESubstanceTransport.cpp  (+2 more)
src/cmake/: GenEclipseMinGW.bat  GenMSVS12x32.bat  GenMSVS12x64.bat  GenMSVS14x32.bat  GenMSVS14x64.bat  GenMinGW.bat  GenRaspberryPi.sh  GenUnixMake.sh  GenXcode.sh  RefreshEclipseMinGW.bat  RefreshMSVS12x32.bat  RefreshMSVS12x64.bat  RefreshMSVS14x32.bat  RefreshMSVS14x64.bat  RefreshMinGW.bat  RefreshUnixMake.sh  RefreshXcode.sh
src/engine/: CMakeLists.txt  Engine.cmake  EngineDriver.cmake  EngineJNI.cmake  EngineTest.cmake  build.xml
src/engine/cpp/: BioGearsEngineJNI.cpp  BioGearsEngineJNI.h  BioGearsPhysiologyEngine.h  BioGearsScenarioDriver.cpp  Verification.h  stdafx.cpp  stdafx.h
src/gui/: build.xml
src/schema/: .classpath  .project  Bind.cmake  CMakeLists.txt  ReadMe-CustomizeSchema.txt  build.xml  buildXSD.bat  buildXSD.sh  buildXSD.xml
src/sdk/: CMakeLists.txt  build-msvc.bat  build.xml
src/sdk/cmake/: GenMSVS14x32.bat  GenMSVS14x64.bat
src/test/: CMakeLists.txt  main.cpp
src/test/BioGearsEngineTesting/: BioGearsEngineTesting.vcxproj  BioGearsEngineTesting.vcxproj.filters
src/test/CalculatorTest/: CalculatorTest.sln  CalculatorTest.vcxproj  CalculatorTest.vcxproj.filters
src/test/RebaseTool/: RebaseTool.sln
src/test/TimingProfileTest/: TimingProfileTest.sln  TimingProfileTest.vcxproj  TimingProfileTest.vcxproj.filters
src/utils/: PlasmaConcentrationError.m
src/utils/PKHuisinga/: GenericPBPKmodel.m  GenericPBPKmodel_drugDatabase.m  GenericPBPKmodel_graphicalOutput.m  GenericPBPKmodel_graphicalOutputLumping.m  GenericPBPKmodel_mechanisticLumping.m  GenericPBPKmodel_physiology.m  GenericPBPKmodel_randomEffects.m  GenericPBPKmodel_referenceIndividual.m  GenericPBPKmodel_simulatePBPKmodel.m  GenericPBPKmodel_virtualPopulation.m  README.TXT  fett.m  printNicely.m
src/utils/UNC PK Analysis/: PKDataShift.m  PK_Validation_Script.m  bars.m  createFit.m  discrete_differentiation.m  doxyTable.m  lowerbound.m  smoothBG.m  smoothing.m  stats.m  transition_bounds.m
(+1249 files in other folders)
