# Files in the project (Relative to this CMAKE file)
SOURCE_GROUP("" FILES ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
# The DLL we are building
ADD_EXECUTABLE(UnitTestDriver ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

SET_TARGET_PROPERTIES(UnitTestDriver PROPERTIES COMPILE_FLAGS -pthread LINK_FLAGS -pthread)

# Preprocessor Definitions and Include Paths
SET(UNIT_TEST_FLAGS)
TARGET_INCLUDE_DIRECTORIES(UnitTestDriver PRIVATE ${CMAKE_SOURCE_DIR}/schema/cpp)
TARGET_INCLUDE_DIRECTORIES(UnitTestDriver PRIVATE ${CMAKE_SOURCE_DIR}/cdm/cpp)
TARGET_INCLUDE_DIRECTORIES(UnitTestDriver PRIVATE ${CMAKE_SOURCE_DIR}/cdm/test/cpp)
TARGET_INCLUDE_DIRECTORIES(UnitTestDriver PRIVATE ${CMAKE_SOURCE_DIR}/engine/cpp)
TARGET_INCLUDE_DIRECTORIES(UnitTestDriver PRIVATE ${CMAKE_SOURCE_DIR}/engine/test/cpp)
TARGET_INCLUDE_DIRECTORIES(UnitTestDriver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../lib)
TARGET_INCLUDE_DIRECTORIES(UnitTestDriver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/Eigen-3.3.1)
TARGET_INCLUDE_DIRECTORIES(UnitTestDriver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/log4cpp/include)
TARGET_INCLUDE_DIRECTORIES(UnitTestDriver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/${XERCES_VER}/src)
TARGET_INCLUDE_DIRECTORIES(UnitTestDriver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../lib/${XSD_VER}/libxsd)
SET_TARGET_PROPERTIES(UnitTestDriver PROPERTIES COMPILE_FLAGS "${UNIT_TEST_FLAGS}" PREFIX "")
# Dependent Libraries
TARGET_LINK_LIBRARIES(UnitTestDriver CommonDataModelTest BioGearsEngineTest)
# Generate cxx/hxx files from xsd
# Copy to the bin
SET(CONFIG_STRING)
IF(WIN32)
  SET(CONFIG_STRING ${CMAKE_CFG_INTDIR})
ELSE()
  STRING(TOLOWER ${CMAKE_BUILD_TYPE} CONFIG_STRING)
ENDIF()

ADD_CUSTOM_COMMAND(TARGET UnitTestDriver POST_BUILD
                   COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:UnitTestDriver> ${CMAKE_CURRENT_SOURCE_DIR}/../../bin/${CONFIG_STRING}${EX_CONFIG}
)
